--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
-							<p>Senior Psychonautics Engineer</p>
+							<h1>Navid Chy</h1>
+							<p>Machine Learning Engineer</p>
 						</header>
 						
 						<hr />
@@ -65,7 +65,7 @@
 							<ul class="icons">
 								<li><a href="#" class="fa-twitter">Twitter</a></li>
 								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="www.facebook.com/navid.msn" class="fa-facebook">Facebook</a></li>
 							</ul>
 						</footer>
 					</section>
